<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ForgotPassword"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:touchscreenBlocksFocus="false"
    android:focusableInTouchMode="true"
    tools:context="com.jackong.jobbooks.ForgotPassword"
    android:background="#ffffff">

    <FrameLayout
        android:id="@+id/touchInterceptor"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="#cfcfcf"
        android:orientation="vertical">

        <TextView
            android:id="@+id/forgot_password_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="65dp"
            android:text="@string/warning_info_forgot_password"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/text_box_forgot_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relativeLayout"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="92dp"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:text="@string/default_text_reset_email"
        android:textColor="#777c7c"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btn_send_reset_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/text_box_forgot_email"
        android:layout_alignStart="@+id/text_box_forgot_email"
        android:layout_below="@+id/text_box_forgot_email"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/curve_red_d50000"
        android:padding="5dp"
        android:text="@string/send_reset_email_button_text"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:onClick="ResetPasswordOnClick"/>

    <ProgressBar
        android:id="@+id/reset_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_send_reset_email"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

</RelativeLayout>
